# harmonics

./: .gitattributes  LICENSE  README.md  pyproject.toml
notebooks/fig1/: colorbars.ipynb
notebooks/fig2/: frequency_basis_and_spectrum.ipynb
notebooks/fig3/: regions.ipynb
notebooks/fig7/: duality.ipynb
notebooks/figA1/: interactions_no_genpca.ipynb
notebooks/figA2/: see_fig4_notebook.txt
notebooks/figA3/: see_fig5_notebook.txt
notebooks/figA4/: see_fig7_notebooks.txt
notebooks/figA5/: pcs_vs_plaquedist.ipynb
src/harmonics/: __init__.py  cli.py  filtering.py
